syntax = "proto3";

package game.get_new_card;
option csharp_namespace = "Protos.Game";

message GetNewCardResponse {
    bool success = 1;
    repeated string symbols = 2;
}
